fix: disallow delete on site content cms

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -6,7 +6,7 @@ local_backend: true
 
 # Change url to a link to the image you want to use, no file paths, must be a URL
 logo:
-  src: "https://www.senoweb.cz/assets/images/senoweb_og_logo_rounded.png"
+  src: "https://coalmarketing.cz/wp-content/uploads/2024/08/coalmarketing_logo_long_color-black-1024x239.png"
   show_in_header: false
 
 locale: "cs"
@@ -23,9 +23,15 @@ collections:
     name: "siteContent"
     folder: "src/content/siteContent"
     create: false
+    delete: false
     slug: "{{year}}-{{month}}-{{day}}_{{slug}}"
     fields:
-      - { label: "Název podstránky", name: "title", widget: "string" }
+      - {
+          label: "Název podstránky",
+          name: "title",
+          widget: "string",
+          hint: "Identifikace podstránky, díky které probíhá napojení na webu.",
+        }
       - { label: "Nadpis", name: "heading", widget: "string" }
       - {
           label: "Štítky",
