--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -123,7 +123,7 @@ collections:
         label: Fotografie
         widget: list
         fields:
-          - { name: url, label: Fotografie, widget: image }
+          - { name: url, label: Fotografie, widget: image, choose_url: false }
           - {
               label: "Popis fotografie",
               name: "alt",
