--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,32 @@
+# Use DecapBridge PKCE auth (required)
 backend:
   name: git-gateway
+  repo: coalmarketing/Tanecni-studio-Ka
   branch: main
+  auth_type: pkce
+  base_url: https://auth.decapbridge.com
+  auth_endpoint: /sites/4f35002b-8b51-44d8-9170-9d6d19300cc8/pkce
+  auth_token_endpoint: /sites/4f35002b-8b51-44d8-9170-9d6d19300cc8/token
+  gateway_url: https://gateway.decapbridge.com
+
+  # See who did what (optional)
+  commit_messages:
+    create: Create {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    update: Update {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    delete: Delete {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    uploadMedia: Upload “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    deleteMedia: Delete “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    openAuthoring: Message {{message}} - {{author-name}} <{{author-login}}> via DecapBridge
+
+# Enable PKCE fields (optional, recommended)
+auth:
+  email_claim: email
+  first_name_claim: first_name
+  last_name_claim: last_name
+  avatar_url_claim: avatar_url
+
+# Add site links in Decap CMS (optional)
+site_url: https://www.tanecnistudioka.cz
 
 local_backend: true
 
